<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout 
	    android:id="@+id/ll_title_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    >
	    <Button
	        android:id="@+id/btn_memo"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	    	android:layout_height="50dp"
	    	android:text="@string/memo"
	        />
	    <Button
	        android:id="@+id/btn_todo"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	    	android:layout_height="50dp"
	    	android:text="@string/todo"
	        />
	    <Button
	        android:id="@+id/btn_img"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	    	android:layout_height="50dp"
	    	android:text="@string/img"
	        />
	</LinearLayout>
    
    <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
           	android:layout_below="@+id/ll_title_layout"
             >
    </android.support.v4.view.ViewPager>

</RelativeLayout>
