<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical"
        android:padding="2dp" >

        <com.cengalabs.flatui.views.FlatTextView
            android:id="@+id/acm_content_memo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/temp_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/acm_alarm_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_border_upper"
        android:orientation="vertical"
        android:paddingTop="3dp" >

        <com.cengalabs.flatui.views.FlatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <com.cengalabs.flatui.views.FlatTextView
                android:id="@+id/acm_alarm_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginRight="0dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <com.cengalabs.flatui.views.FlatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginLeft="0dp"
                android:text="@string/year"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <com.cengalabs.flatui.views.FlatTextView
                android:id="@+id/acm_alarm_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginRight="0dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

			<com.cengalabs.flatui.views.FlatTextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_margin="2dp"
			    android:layout_marginLeft="0dp"
			    android:text="@string/month"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="#000000" />

            <com.cengalabs.flatui.views.FlatTextView
                android:id="@+id/acm_alarm_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginRight="0dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

			<com.cengalabs.flatui.views.FlatTextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_margin="2dp"
			    android:layout_marginLeft="0dp"
			    android:text="@string/day"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="#000000" />

            <com.cengalabs.flatui.views.FlatTextView
                android:id="@+id/acm_alarm_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginRight="0dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

			<com.cengalabs.flatui.views.FlatTextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_margin="2dp"
			    android:layout_marginLeft="0dp"
			    android:layout_marginRight="0dp"
			    android:text="@string/time"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="#000000" />

            <com.cengalabs.flatui.views.FlatTextView
                android:id="@+id/acm_alarm_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginLeft="0dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <com.cengalabs.flatui.views.FlatTextView
                android:id="@+id/acm_alarm_apm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
