<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.cengalabs.flatui.views.FlatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/ace_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="500"
                android:ems="10"
                android:text="" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.cengalabs.flatui.views.FlatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="1dp"
                    android:text="@string/alarm"
                    android:textColor="@android:color/black"
                    android:textSize="11pt" />

                <com.cengalabs.flatui.views.FlatCheckBox
                    android:id="@+id/ace_set_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/alarm_setting"
                    android:textColor="@color/blood_dark" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ace_picker_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <com.cengalabs.flatui.views.FlatButton
                    android:id="@+id/ace_datepick_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="날짜" />

                <com.cengalabs.flatui.views.FlatButton
                    android:id="@+id/ace_timepick_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="시간" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TimePicker
                    android:id="@+id/ace_timepicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <DatePicker
                    android:id="@+id/ace_datepicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.cengalabs.flatui.views.FlatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textSize="11pt"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:id="@+id/ace_todo_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical" >

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>